[package]
name = "shower"
version = "0.1.0"
authors = ["Stephan Luther <kvsari@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wgpu/vulkan"]

[dependencies]
wgpu = "0.4.0"
log = "0.4.8"
cgmath = "0.17"
shaderc = "0.6.1"
winit = "0.20.0-alpha4"
derive-getters = "0.1.0"
num-traits = "0.2.9"

#gromit = { git = "https://github.com/kvsari/gromit.git", branch = "master", version = "0.1.0" }
#gromit = { git = "https://github.com/kvsari/gromit.git", branch = "develop" }

[dev-dependencies]
dotenv = "0.15.0"
env_logger = "0.7.1"
